<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Task2">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/task2_caption"
            android:textColor="#f44336"
            android:textSize="33sp" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10sp"
            android:hint="@string/task2_typeText"
            android:inputType="text" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10sp"
            android:hint="@string/task2_textPersonName"
            android:inputType="textPersonName" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10sp"
            android:hint="@string/task2_textPassword"
            android:inputType="textPassword" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10sp"
            android:hint="@string/task2_phone"
            android:inputType="phone" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10sp"
            android:hint="@string/task2_number"
            android:inputType="number" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10sp"
            android:hint="@string/task2_textEmailAddress"
            android:inputType="textEmailAddress" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10sp"
            android:hint="@string/task2_textMultiLine"
            android:inputType="textMultiLine"
            android:lines="3" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="30sp"
            android:onClick="clickGoTask3"
            android:text="Переход к календарю" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>