<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Task3">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/task3_caption"
            android:textColor="#f44336"
            android:textSize="33sp" />

        <CalendarView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/task4_caption"
            android:textColor="#f44336"
            android:textSize="33sp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="12sp"
            android:text="@string/task3_ems"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>